<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp"
    android:paddingBottom="32dp"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:tint="@color/dark_blue"
        android:scaleType="fitXY"
        android:contentDescription="@string/cd_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:lineSpacingExtra="2sp"
        android:text="@string/welcome"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#8e8e93"
        android:lineSpacingExtra="4sp"
        android:text="@string/description"/>

    <Button
        android:id="@+id/crash_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="crash me"/>

</LinearLayout>